--- a/estilo.css
+++ b/estilo.css
@@ -8,13 +8,11 @@ body {/* zerando o margin do body e fonte padrão */
   margin: 0px;
   font-family: 'Segoe UI';
 }
-.nav {/* configurações da barra de navegação para computador */
+.nav { /*definindo design para computadores*/
   width: 100%;
   background-color: #1A237E;
   display: flex;
   align-items: center;
-  position: fixed;
-  margin-top: -15px;
 }
 .nav > .nav-header {
   flex: 0.95;
@@ -39,9 +37,28 @@ body {/* zerando o margin do body e fonte padrão */
 .nav > #nav-check {
     display: none;
 }
-@media (max-width: 480px) {/* definindo configurações da barra de navegação para mobile */
+@media (max-width: 700px) { /*Responsividade para mobile*/
   .nav {
     padding: 1rem;
+  }
+  .nav > .nav-btn {
+    display: inline-block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding-top: 0.2rem;
+  }
+  .nav > .nav-btn > label {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    padding: 13px;
+  }
+  .nav > .nav-btn > label > span {
+    display: block;
+    width: 25px;
+    height: 10px;
+    border-top: 2px solid #eee;
   }
   .nav > .nav-list {
     position: absolute;
