--- a/estilo.css
+++ b/estilo.css
@@ -1,66 +1,85 @@
-html{
-  scroll-behavior: smooth; /* definindo rolagem suave, funciona na maioria dos navegadores */
+html {
+  scroll-behavior: smooth;
+  /* definindo rolagem suave, funciona na maioria dos navegadores */
 }
+
 * {
   box-sizing: border-box;
 }
-body {/* zerando o margin do body e fonte padrão */
+
+body {
+  /* zerando o margin do body e fonte padrão */
   margin: 0px;
   font-family: 'Segoe UI';
 }
-.nav { /*definindo design para computadores*/
+
+.nav {
+  /*definindo design para computadores*/
   width: 100%;
   background-color: #1A237E;
   display: flex;
   align-items: center;
 }
-.nav > .nav-header {
+
+.nav>.nav-header {
   flex: 0.95;
   padding-left: 1rem;
 }
-.nav > .nav-header > .nav-title {
+
+.nav>.nav-header>.nav-title {
   font-size: 22px;
   color: #fff;
 }
-.nav > .nav-list {
+
+.nav>.nav-list {
   display: flex;
   gap: 2rem;
 }
-.nav > .nav-list > li {
+
+.nav>.nav-list>li {
   list-style-type: none;
 }
-.nav > .nav-list > li a {
+
+.nav>.nav-list>li a {
   text-decoration: none;
   color: #efefef;
   cursor: pointer;
 }
-.nav > #nav-check {
-    display: none;
+
+.nav>#nav-check {
+  display: none;
 }
-@media (max-width: 700px) { /*Responsividade para mobile*/
+
+@media (max-width: 700px) {
+
+  /*Responsividade para mobile*/
   .nav {
     padding: 1rem;
   }
-  .nav > .nav-btn {
+
+  .nav>.nav-btn {
     display: inline-block;
     position: absolute;
     right: 0;
     top: 0;
     padding-top: 0.2rem;
   }
-  .nav > .nav-btn > label {
+
+  .nav>.nav-btn>label {
     display: inline-block;
     width: 50px;
     height: 50px;
     padding: 13px;
   }
-  .nav > .nav-btn > label > span {
+
+  .nav>.nav-btn>label>span {
     display: block;
     width: 25px;
     height: 10px;
     border-top: 2px solid #eee;
   }
-  .nav > .nav-list {
+
+  .nav>.nav-list {
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -73,22 +92,29 @@ body {/* zerando o margin do body e fonte padrão */
     left: 0;
     overflow: hidden;
   }
-  .nav > .nav-list > li {
+
+  .nav>.nav-list>li {
     width: 100%;
     margin-top: 1.5rem;
   }
-  .nav > #nav-check:checked ~ .nav-list {
+
+  .nav>#nav-check:checked~.nav-list {
     height: calc(100vh - 50px);
   }
 }
 
-body{/* definindo cor de fundo */
+body {
+  /* definindo cor de fundo */
   background-color: antiquewhite;
 }
-main{ /* margin padrão */
+
+main {
+  /* margin padrão */
   margin: 15px;
 }
-section{ /* definindo design para cartões das sessões */
+
+section {
+  /* definindo design para cartões das sessões */
   padding: 5px;
   padding-right: 20px;
   padding-left: 20px;
@@ -98,7 +124,7 @@ section{ /* definindo design para cartões das sessões */
   border-radius: 2em;
 }
 
-span{
+span {
   font-style: oblique;
   position: relative;
   margin-right: 10px;
